--- a/Articles/SFC/Resumo.org
+++ b/Articles/SFC/Resumo.org
@@ -13,14 +13,14 @@
 #+LATEX:  \renewcommand{\abstractname}{Resumo}
 #+BEGIN_abstract
 Neste artigo, desenvolvemos um modelo supermultiplicador sraffiano parcimonioso com consistência entre fluxos e estoques (SSM-SFC) com dois gastos autônomos não criadores de capacidade produtiva: investimento residencial e consumo financiado por crédito.
-Nosso modelo respresenta uma economia fechada e sem governo com famílias trabalhadoras e capitalistas em que somente estas últimas não possuem restrição de crédito.
-A inclusão do investimento residencial implica um modelo SSM-SFC com dois ativos reais: capital das firmas e residência das famílias.
+Nosso modelo representa uma economia fechada e sem governo com famílias de trabalhadores e de capitalistas no qual somente estas últimas não possuem restrição de crédito.
+A inclusão do investimento residencial implica um modelo SSM-SFC com dois ativos reais: capital das firmas e imóveis das famílias.
 Em nosso modelo, a taxa de crescimento do investimento residencial responde às mudanças na inflação de preço dos imóveis.
 As simulações numéricas mostram que nosso modelo preserva os resultados convencionais do supermultiplicador sraffiano.
 Como um resultado particular, o aumento na taxa de crescimento do investimento residencial implica uma redução da participação nos imóveis nos ativos reais totais.
 Baseando-se na bolha imóbiliária recente nos EUA, incluímos dados de inflação do preços dos imóveis (1992-2019) em nossas simulações.
-Apesar de simples, nossas simulações numéricas são capazes de repoduzir alguns fatos estilizados como o investimento residencial liderando o ciclo econômico bem como a acumulação de capital e um padrão no sentido horário entre gastos autônomos não criadores de capacidade e grau de utilização da capacidade.\\
+Apesar de simples, nossas simulações numéricas são capazes de repoduzir alguns fatos estilizados como o investimento residencial liderando o ciclo econômico bem como a acumulação de capital e um padrão cíclico entre gastos autônomos não criadores de capacidade e grau de utilização da capacidade.\\
 
-#+LATEX: \noindent \textbf{Palavras-Chave:} Investimento Residencial; Supermultiplicador sraffiano; Bolha de ativos; Abordagem consistente entre fluxos e estoques.\\
-#+LATEX: \noindent \textbf{JEL:} E11; E22; E32
+#+LATEX: \noindent \textbf{Palavras-Chave:} Investimento Residencial; Supermultiplicador sraffiano; Bolha de ativos; Abordagem consistente entre fluxos e estoques, Economia Norte-americana.\\
+#+LATEX: \noindent \textbf{JEL:} B51, E11, E12, E17, G51, O41, O51
 #+END_abstract
