--- a/Writings/QCA/DataMap.org
+++ b/Writings/QCA/DataMap.org
@@ -34,23 +34,59 @@
 * Data Sources Summary
 
 #+BEGIN: columnview :maxlevel 3 :id global
-| TODO  | ITEM                                                           | Var.    | FRQ       |   Start |     End | Cov     | Season. Adj  | Public | URL  |
-|-------+----------------------------------------------------------------+---------+-----------+---------+---------+---------+--------------+--------+------|
-|       | HTML headers                                                   |         |           |         |         |         |              |        |      |
-|       | Usefull links                                                  |         |           |         |         |         |              |        |      |
-|       | Data Sources Summary                                           |         |           |         |         |         |              |        |      |
-|       | Mortgage Loan to Value Ratio                                   |         |           |         |         |         |              |        |      |
-| Filed | England                                                        | ratio   | Quarterly |  1974Q1 |  2018Q3 | Country | Not Informed | Yes    | [[http://opendatacommunities.org/data/housing-market/ratio/loan-to-value][Link]] |
-| Filed | USA                                                            | ratio   | Monthly   | 2017M01 | 2020M03 | Country | Not Informed | Yes    | [[https://www.fhfa.gov/DataTools/Downloads/Documents/NATIONAL-MORTGAGE-DATABASE-(NMDB)-AGGREGATE-DATA/National-Statistics-for-New-Residential-Mortgages-in-the-United-States.xlsx][Link]] |
-|       | Share of variable rate loans in total loans for house purchase |         |           |         |         |         |              |        |      |
-| Filed | USA                                                            |         |           |         |         |         |              |        |      |
-| Filed | Fixed                                                          | nominal | Monthly   |    1986 |    2018 | Country | Not Informed | Yes    | [[https://www.fhfa.gov/DataTools/Downloads/Documents/Historical-Summary-Tables/Table20-2019-by-Month.xls][Link]] |
-| Filed | Adjustable                                                     | nominal | Monthly   |    1986 |    2018 | Country | Not Informed | Yes    | [[https://www.fhfa.gov/DataTools/Downloads/Documents/Historical-Summary-Tables/Table23-2019-by-Month.xls][Link]] |
-| Filed | Austria                                                        | ratio   | Monthly   |    2003 |    2020 | Country | Not Informed | Yes    | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.AT.SVLHPHH.EUR.MIR.Z][Link]] |
-| Filed | Belgium                                                        | ratio   | Monthly   |    2003 |    2020 | Country | Not Informed | Yes    | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.BE.SVLHPHH.EUR.MIR.Z][Link]] |
-|       | Loan Purpose Type                                              |         |           |         |         |         |              |        |      |
-|       | Property Usage Type                                            |         |           |         |         |         |              |        |      |
-|       | Borrower Credit Score Value                                    |         |           |         |         |         |              |        |      |
+| TODO      | ITEM                                                           | Var.    | FRQ       |   Start |     End | Cov                         | Season. Adj  | Key                        | URL  |
+|-----------+----------------------------------------------------------------+---------+-----------+---------+---------+-----------------------------+--------------+----------------------------+------|
+|           | HTML headers                                                   |         |           |         |         |                             |              |                            |      |
+|           | Usefull links                                                  |         |           |         |         |                             |              |                            |      |
+|           | Data Sources Summary                                           |         |           |         |         |                             |              |                            |      |
+|           | Mortgaging - cite:jorda_2016_great                             |         |           |         |         |                             |              |                            |      |
+|           | Mortgage Loan to Value Ratio                                   |         |           |         |         |                             |              |                            |      |
+| Filed     | England                                                        | ratio   | Quarterly |  1974Q1 |  2018Q3 | Country                     | Not Informed |                            | [[http://opendatacommunities.org/data/housing-market/ratio/loan-to-value][Link]] |
+| Filed     | USA                                                            | ratio   | Monthly   | 2017M01 | 2020M03 | Country                     | Not Informed |                            | [[https://www.fhfa.gov/DataTools/Downloads/Documents/NATIONAL-MORTGAGE-DATABASE-(NMDB)-AGGREGATE-DATA/National-Statistics-for-New-Residential-Mortgages-in-the-United-States.xlsx][Link]] |
+|           | Share of variable rate loans in total loans for house purchase |         |           |         |         |                             |              |                            |      |
+| Searching | Canada                                                         | ratio   | Yearly    |    2006 |    2017 | Country                     | Not Informed |                            | [[https://www.canadianmortgagetrends.com/wp-content/uploads/2014/11/Res_Mtge_Mkt_Fall-Report-Final.pdf][Link]] |
+|           | [[https://www.canadianmortgagetrends.com/wp-content/uploads/2014/11/Res_Mtge_Mkt_Fall-Report-Final.pdf][2014]]                                                           |         |           |         |         |                             |              |                            |      |
+| Searching | Japan                                                          |         |           |         |         |                             |              |                            |      |
+| Searching | Norway                                                         |         |           |         |         |                             |              |                            |      |
+| Searching | Switzerland                                                    |         |           |         |         |                             |              |                            |      |
+| Filed     | USA - Fixed                                                    | nominal | Monthly   |    1986 |    2018 | Country                     | Not Informed |                            | [[https://www.fhfa.gov/DataTools/Downloads/Documents/Historical-Summary-Tables/Table20-2019-by-Month.xls][Link]] |
+| Filed     | USA - Adjustable                                               | nominal | Monthly   |    1986 |    2018 | Country                     | Not Informed |                            | [[https://www.fhfa.gov/DataTools/Downloads/Documents/Historical-Summary-Tables/Table23-2019-by-Month.xls][Link]] |
+| Filed     | Austria                                                        | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.AT.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.AT.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Belgium                                                        | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.BE.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.BE.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Bulgaria                                                       | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.BG.SVLHPHH.U1.MIR.Z  | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.BG.SVLHPHH.U1.MIR.Z][Link]] |
+| Filed     | Cyprus                                                         | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.CY.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.CY.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Czech Republic (CZ)                                            | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.CZ.SVLHPHH.U1.MIR.Z  | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.CZ.SVLHPHH.U1.MIR.Z][Link]] |
+| Filed     | Germany (DE)                                                   | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.DE.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.DE.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Denmark (DK)                                                   | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.DK.SVLHPHH.U1.MIR.Z  | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.DK.SVLHPHH.U1.MIR.Z][Link]] |
+| Filed     | Estonia (EE)                                                   | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.DK.SVLHPHH.U1.MIR.Z  | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.EE.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Estonia (EE)                                                   | ratio   | Monthly   |    2003 |    2020 | Block and Domestic Currency | Not Informed | RAI.M.EE.SVLHPHH.U1.MIR.Z  | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.EE.SVLHPHH.U1.MIR.Z][Link]] |
+| Filed     | Spain (ES)                                                     | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.ES.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.ES.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Finland (FI)                                                   | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.FI.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.ES.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | France (FR)                                                    | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.FR.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.FR.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | United Kingdom (GB)                                            | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.GB.SVLHPHH.GBP.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.GB.SVLHPHH.GBP.MIR.Z][Link]] |
+| Filed     | Greece (GR)                                                    | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.GR.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.GR.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Croatia (HR)                                                   | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.HR.SVLHPHH.U1.MIR.Z  | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.HR.SVLHPHH.U1.MIR.Z][Link]] |
+| Filed     | Hungary (HU)                                                   | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.HU.SVLHPHH.U1.MIR.Z  | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.HU.SVLHPHH.U1.MIR.Z][Link]] |
+| Filed     | Ireland (IE)                                                   | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.IE.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.IE.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Italy (IT)                                                     | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.IT.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.IT.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Luxembourg (LU)                                                | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.LU.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.LU.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Netherlands (NL)                                               | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.NL.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.NL.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Poland (PL)                                                    | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.PL.SVLHPHH.U1.MIR.Z  | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.PL.SVLHPHH.U1.MIR.Z][Link]] |
+| Filed     | Portugal (PT)                                                  | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.PT.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.PT.SVLHPHH.EUR.MIR.Z][Link]] |
+| Filed     | Romania (RO)                                                   | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.SE.SVLHPHH.U1.MIR.Z  | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.RO.SVLHPHH.U1.MIR.Z][Link]] |
+| Filed     | Sweden (SE)                                                    | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.SE.SVLHPHH.U1.MIR.Z  | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.SE.SVLHPHH.U1.MIR.Z][Link]] |
+| Filed     | Euro area                                                      | ratio   | Monthly   |    2003 |    2020 | Country                     | Not Informed | RAI.M.U2.SVLHPHH.EUR.MIR.Z | [[https://sdw.ecb.europa.eu/quickview.do?SERIES_KEY=304.RAI.M.U2.SVLHPHH.EUR.MIR.Z][Link]] |
+|           | Loan Purpose Type                                              |         |           |         |         |                             |              |                            |      |
+|           | Property Usage Type                                            |         |           |         |         |                             |              |                            |      |
+|           | Borrower Credit Score Value                                    |         |           |         |         |                             |              |                            |      |
+|           | Homeownership Rate                                             |         |           |         |         |                             |              |                            |      |
+|           | Mortgage Debt Outstanding-to-GDP                               |         |           |         |         |                             |              |                            |      |
+|           | Early Repayment                                                |         |           |         |         |                             |              |                            |      |
+|           | Amortzation and Term                                           |         |           |         |         |                             |              |                            |      |
+|           | Mortgage Default and Foreclosure                               |         |           |         |         |                             |              |                            |      |
+|           | Mortgage Funding                                               |         |           |         |         |                             |              |                            |      |
+|           | Mortgage depth                                                 |         |           |         |         |                             |              |                            |      |
+|           | Housing Loan Penetration                                       |         |           |         |         |                             |              |                            |      |
 #+END
 
 * Mortgaging - cite:jorda_2016_great
